welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:13: error: type mismatch;
 found   : Unit
 required: String
	if ( vacation==true && (day==0 && day==6)) {
        ^